<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <Button
        android:id="@+id/getVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:background="@drawable/shape_button_selected"
        android:text="@string/getVerificationCode"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputPhoneNumber" />

    <Button
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:text="@string/passwordLogin"
        android:textColor="@color/darkgray"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/login"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_button_selected"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:background="@null"
        android:text="@string/forgetPassword"
        android:textColor="@color/darkgray"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/register" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:text="@string/register"
        android:textColor="@color/darkgray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/forgetPassword"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.488" />

    <EditText
        android:id="@+id/inputPhoneNumber"
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:layout_marginBottom="258dp"
        android:layout_marginTop="357dp"
        android:background="@drawable/textstyle"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/phoneTip"
        android:maxLength="11"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toStartOf="@+id/getVerificationCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputVerificationCode"
        android:layout_width="213dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/textstyle"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/verificationCodeTip"
        android:maxLength="6"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/inputPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="159dp"
        android:layout_height="86dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:backgroundTint="#804343"
        android:drawableTint="#30B1B6"
        android:text="Be Linked"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorApp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="488dp"
        android:text="@string/mottoLogin"
        android:textColor="@color/colorApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="313dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="343dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="361dp" />
</androidx.constraintlayout.widget.ConstraintLayout>